<resources>
    <string name="app_name">TaskMaster</string>
    <string name="email">Email</string>
    <string name="log_in">Log In</string>
    <string name="forget_password">Forget password</string>
    <string name="sign_up">Sign up</string>
    <string name="taskmaster">TaskMaster</string>
    <string name="email_input">Email</string>
    <string name="password_input">Password</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome!!!</string>
    <string name="reset">Reset</string>
    <string name="sign_out">Sign Out</string>
    <string name="signed_in_as">Signed in as:</string>
    <string name="email_address">Email Address</string>
    <string name="tasklist">Tasklist</string>
    <string name="to_battle">To Battle!</string>
    <string name="upgrades">Upgrades</string>
    <string name="back">Back</string>
    <string name="tasklist_taskListPage">Tasklist</string>
    <string name="start_logging_your_tasks">Start logging your tasks!!!</string>
    <string name="add_task">Add task</string>
    <string name="task_added">Task Added!</string>
    <string name="todo">TODO</string>
    <string name="new_task">New Task</string>
    <string name="save">Save</string>
    <string name="set_due_date">Set due date</string>
    <string name="_21_01_22">21/ 01/22</string>
    <string name="highscore">Highscore:</string>
</resources>