<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:foregroundTint="#000000"
    tools:context=".TaskStuff.TaskList">

    <Button
        android:id="@+id/back_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#CC3939"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/back"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/addTask_Button"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/guideline12"
        app:layout_constraintTop_toBottomOf="@id/taskRecycler"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/taskListText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/tasklist_taskListPage"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/startLoggingText"
        app:layout_constraintEnd_toEndOf="@id/guideline13"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="@id/guideline12"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042" />

    <TextView
        android:id="@+id/startLoggingText"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="-30dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/press_start_2p"
        android:rotation="-5"
        android:text="@string/start_logging_your_tasks"
        android:textAlignment="center"
        android:textColor="#E30000"
        android:textSize="11sp"
        app:layout_constraintBottom_toTopOf="@id/taskRecycler"
        app:layout_constraintEnd_toEndOf="@id/guideline14"
        app:layout_constraintHorizontal_bias="0.374"
        app:layout_constraintStart_toStartOf="@id/guideline12"
        app:layout_constraintTop_toBottomOf="@id/taskListText"
        app:layout_constraintVertical_bias="0.078"
        tools:ignore="TextContrastCheck" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/taskRecycler"
        android:layout_width="409dp"
        android:layout_height="477dp"
        android:nestedScrollingEnabled="true"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/back_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startLoggingText" />

    <Button
        android:id="@+id/addTask_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#14AA03"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/add_task"
        android:textColor="#FFFFFF"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline15"
        app:layout_constraintTop_toBottomOf="@id/taskRecycler"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/help_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/press_start_2p"
        android:text="Help"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline14"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />


</androidx.constraintlayout.widget.ConstraintLayout>